src/test/ui/const-generics/generic_const_exprs/feature-gate-generic_const_exprs.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/feature-gate-generic_const_exprs.rs:8:30
   |
LL | fn test<const N: usize>() -> Arr<N> where Arr<N>: Default {
   |                              ^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

